# FinAgentLight2

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
dataset/: downloader.ipynb  downloader.py
dataset/assets/: dj30.json
dataset/gnews_data/: news_20250123_055903.json
dataset/logger/: __init__.py  log.py
dataset/news_data/: news_20250123_074956.json
finagentlight/: __init__.py
tools/: download.py
